--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,6 @@ pyttsx3==2.90
 gTTS==2.2.2
 playsound==1.2.2
 # SpeechRecognition==3.8.1
+# git+https://github.com/abenassi/Google-Search-API
+# googlesearch-python
+python-googlesearch
